Day 3: Fifth Lesson is finished - Python Pizza Delivery Program was written.

--- a/Day 3/Python Pizza/task-info.yaml
+++ b/Day 3/Python Pizza/task-info.yaml
@@ -15,5 +15,8 @@ files:
   - name: solution.py
     visible: true
     learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: "Wed, 09 Jul 2025 20:47:26 UTC"
 record: -1
